--- a/index.html
+++ b/index.html
@@ -1,26 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-img {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  z-index: -1;
-  border: 3px solid #73AD21;
-}
-div.relative {
-  background-color:lightblue;
-  font-family:verdana;
-  color:darkblue;
-  position: relative;
-  left: 30px;
-  width: 700px;
-  border: 3px solid #73AD21;
-}
-
-
-</style>
+<link rel="stylesheet" href="home.css">
 </head>
 <body style=background-color:lavender;>
 
@@ -42,47 +23,6 @@ Here you can learn more about the art hanging in our library.</p>
   
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body {
-  font-family: Arial;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-form.example input[type=text] {
-  padding: 10px;
-  font-size: 17px;
-  border: 1px solid grey;
-  float: left;
-  width: 80%;
-  background: #f1f1f1;
-}
-
-form.example button {
-  float: left;
-  width: 20%;
-  padding: 10px;
-  background: #2196F3;
-  color: white;
-  font-size: 17px;
-  border: 1px solid grey;
-  border-left: none;
-  cursor: pointer;
-}
-
-form.example button:hover {
-  background: #0b7dda;
-}
-
-form.example::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-</style>
-</head>
 <body>
 <p>Every painting has a refrence number under it consisting of 4 numbers and 3 letters,<br>
 Please type the refrence number to pull up more information about the painting</p>
