--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 <link rel="stylesheet" href="home.css">
 </head>
 <body style=background-color:lavender;>
@@ -20,10 +22,7 @@ Here you can learn more about the art hanging in our library.</p>
 <br>
 <a href="Index3.html">View Directory of all art pieces</a>
 </div>
-  
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<body>
+<div>
 <p>Every painting has a refrence number under it consisting of 4 numbers and 3 letters,<br>
 Please type the refrence number to pull up more information about the painting</p>
 
@@ -33,5 +32,6 @@ Please type the refrence number to pull up more information about the painting</
 </form>
 
 
-</body>
+</div>
+  </body>
 </html>
