--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 <link rel="stylesheet" href="home.css">
 </head>
-<body style=background-color:lavender;>
+<body>
 
 <h1 style="font-size:300%;color:purple;">Brooklyn College Student Art Directory</h1>
 <div class="relative">
