--- a/index.html
+++ b/index.html
@@ -8,28 +8,21 @@
 <body>
 
 <h1 style="font-size:300%;color:purple;">Brooklyn College Student Art Directory</h1>
+  <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
+  <input type="text" placeholder="Search.." name="search2">
+  <button type="submit"><i class="fa fa-search"></i></button>
+</form>
 <div class="relative">
 
 <p>We are a student operated website created for Brooklyn College students<br>
 Here you can learn more about the art hanging in our library.</p>
-
-
-</div>
-
-<div class="relative">
-<a href="index2.html">Find out more about us here</a>
+<br><br>
+<a href="Info.html">Find out more about us here</a>
 <br>
-<a href="Index3.html">View Directory of all art pieces</a>
-</div>
-<div>
+<a href="Directory.html">View Directory of all art pieces</a>
+<br><br>
 <p>Every painting has a refrence number under it consisting of 4 numbers and 3 letters,<br>
 Please type the refrence number to pull up more information about the painting</p>
-
-<form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
-  <input type="text" placeholder="Search.." name="search2">
-  <button type="submit"><i class="fa fa-search"></i></button>
-</form>
-
 
 </div>
   </body>
