--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 <link rel="stylesheet" href="home.css">
 </head>
 <body>
 
-<h1 style="font-size:300%;color:purple;">Brooklyn College Student Art Directory</h1>
+<h1>Brooklyn College Student Art Directory</h1>
+  
   <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
   <input type="text" placeholder="Search.." name="search2">
   <button type="submit"><i class="fa fa-search"></i></button>
 </form>
+  
 <div class="relative">
 
 <p>We are a student operated website created for Brooklyn College students<br>
