--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <h1>Brooklyn College Student Art Directory</h1>
   
+    <div class="topnav">
+     <a href="Info.html">Info</a>
+  <a href="Directory.html">Directory</a>
+</div>
+    
+    <!--Search tab in html-->
   <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
   <input type="text" placeholder="Search.." name="search2">
   <button type="submit"><i class="fa fa-search"></i></button>
@@ -19,10 +25,6 @@
 
 <p>We are a student operated website created for Brooklyn College students<br>
 Here you can learn more about the art hanging in our library.</p>
-<br><br>
-<a href="Info.html">Find out more about us here</a>
-<br>
-<a href="Directory.html">View Directory of all art pieces</a>
 <br><br>
 <p>Every painting has a refrence number under it consisting of 4 numbers and 3 letters,<br>
 Please type the refrence number to pull up more information about the painting</p>
