--- a/index.html
+++ b/index.html
@@ -22,14 +22,22 @@
 </form>
     </div>
   
-<div class="relative">
-
+<div class="row">
+<div class="leftcolumn">
+<div class="card">
+      <div class="fakeimg" style="height:200px;">
+      <p><strong>Below is some info:</strong><br><br>      
 <p>We are a student operated website created for Brooklyn College students<br>
 Here you can learn more about the art hanging in our library.</p>
 <br><br>
 <p>Every painting has a refrence number under it consisting of 4 numbers and 3 letters,<br>
 Please type the refrence number to pull up more information about the painting</p>
-
+ </p>
+      </div>
+    </div>
+    
 </div>
+</div>
+    
   </body>
 </html>
