--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="Directory.html">Directory</a>
         
     <!--Search tab in html-->
-  <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
+  <form class="example" action="/action_page.php" style="margin:auto;max-width:300px;float:right;">
   <input type="text" placeholder="Search.." name="search2">
   <button type="submit"><i class="fa fa-search"></i></button>
 </form>
