--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
   <!--Navigation bar-->
     <div class="topnav">
+        <a href="index.html">Home</a>
      <a href="Info.html">Info</a>
   <a href="Directory.html">Directory</a>
         
