--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <a href="Directory.html">Directory</a>
         
     <!--Search tab in html-->
-  <form class="example" action="/action_page.php" style="margin:auto;max-width:300px;float:right;">
+  <form class="example" action="/action_page.php" style="float:right;">
   <input type="text" placeholder="Search.." name="search2">
   <button type="submit"><i class="fa fa-search"></i></button>
 </form>
@@ -41,42 +41,42 @@
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="comingSoon.jpg" alt="House on Fire" width="100" height="100">
+      <img src="comingSoon.jpg" alt="comingSoon" width="100" height="100">
       <div class="carousel-caption">
         <h3>Image 0</h3>
         <p>Image 0</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="comingSoon.jpg" alt="Kermit" width="100" height="100">
+      <img src="comingSoon.jpg" alt="comingSoon" width="100" height="100">
       <div class="carousel-caption">
         <h3>Image 1</h3>
         <p>Image 1</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="comingSoon.jpg" alt="pro" width="100" height="100">
+      <img src="comingSoon.jpg" alt="comingSoon" width="100" height="100">
       <div class="carousel-caption">
         <h3>Image 2</h3>
         <p>Image 2</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="comingSoon.jpg" alt="Luigi" width="100" height="100">
+      <img src="comingSoon.jpg" alt="comingSoon" width="100" height="100">
       <div class="carousel-caption">
         <h3>Image 3</h3>
         <p>Image 3</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="comingSoon.jpg" alt="spongebob" width="100" height="100">
+      <img src="comingSoon.jpg" alt="comingSoon" width="100" height="100">
       <div class="carousel-caption">
         <h3>Image 4</h3>
         <p>Image 4</p>
       </div>   
     </div>
      <div class="carousel-item">
-      <img src="comingSoon.jpg" alt="New York" width="100" height="100">
+      <img src="comingSoon.jpg" alt="comingSoon" width="100" height="100">
       <div class="carousel-caption">
         <h3>Image 5</h3>
         <p>Image 5</p>
