--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Please type the refrence number to pull up more information about the painting</
     <!-- 3 Images seperated-->
     <!-- 1 image-->
     <div class="row">
-    <div class="leftcolumn">
+    <div class="leftcolumn2">
 <div class="card">
       <img src="comingSoon.jpg" alt="Game image" width="200" height="200">
     </div>
