--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Please type the refrence number to pull up more information about the painting</
     <div class="row">
     <div class="leftcolumn2">
 <div class="card">
-      <img src="comingSoon.jpg" alt="Game image" width="200" height="200">
+      <img src="comingSoon.jpg" alt="comingSoon" width="200" height="200">
     </div>
     </div>
     
@@ -121,14 +121,14 @@ Please type the refrence number to pull up more information about the painting</
     <!--2nd image-->
     <div class="centercolumn">
 <div class="card">
-      <img src="comingSoon.jpg" alt="Game image" width="200" height="200">
+      <img src="comingSoon.jpg" alt="comingSoon" width="200" height="200">
     </div>
     </div>
     
     <!--3 image-->
     <div class="rightcolumn">
 <div class="card">
-      <img src="comingSoon.jpg" alt="Game image" width="200" height="200">
+      <img src="comingSoon.jpg" alt="comingSoon" width="200" height="200">
     </div>
     </div>
     </div>
