--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Please type the refrence number to pull up more information about the painting</
     <!-- 1 image-->
     <div class="row">
     <div class="leftcolumn2">
-<div class="card">
+<div class="card2">
       <img src="comingSoon.jpg" alt="comingSoon" width="200" height="200">
     </div>
     </div>
@@ -120,14 +120,14 @@ Please type the refrence number to pull up more information about the painting</
     
     <!--2nd image-->
     <div class="centercolumn">
-<div class="card">
+<div class="card2">
       <img src="comingSoon.jpg" alt="comingSoon" width="200" height="200">
     </div>
     </div>
     
     <!--3 image-->
     <div class="rightcolumn">
-<div class="card">
+<div class="card2">
       <img src="comingSoon.jpg" alt="comingSoon" width="200" height="200">
     </div>
     </div>
