--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@ Please type the refrence number to pull up more information about the painting</
       <img src="comingSoon.jpg" alt="comingSoon" width="250" height="300">
     </div>
     </div>
+        
+            <!--3 image-->
+    <div class="rightcolumn2">
+<div class="card2">
+      <img src="comingSoon.jpg" alt="comingSoon" width="250" height="300">
+    </div>
+    </div>
     </div>
     
   </body>
