--- a/index.html
+++ b/index.html
@@ -173,6 +173,21 @@ Please type the refrence number to pull up more information about the painting</
 </div>
 </div>
     
+      <!--Card with info 2-->    
+<div class="row">
+<div class="leftcolumn">
+<div class="card">
+      <p><strong>Below is where to find us:</strong><br><br>      
+<a href="https://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/departments/library.php">Where To Find Us<br></a>
+    <p><strong>Contact Information</strong>
+        <strong>Chief Librarian:</strong> Mary Mallery
+
+<strong>Location:</strong> 412 Library
+        <strong>Phone:</strong> 718.951.5342
+        <strong>Fax:</strong> 718.951.4557</p>
+    </div>
     
+</div>
+</div>
   </body>
 </html>
