--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@ Please type the refrence number to pull up more information about the painting</
       <!--Card with info 2-->    
 <div class="row">
 <div class="leftcolumn">
-<div class="card" style="display: inline-block">   
-<a href="https://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/departments/library.php" style=“text-align: center”>Where To Find Us<br></a><br>
+<div class="card">   
+<a href="https://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/departments/library.php">Where To Find Us<br><br></a>
     <p><strong>Contact Information</strong><br>
         <strong>Chief Librarian:</strong> Mary Mallery<br>
 <strong>Location:</strong> 412 Library<br>
