--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       </div>   
     </div>
   </div>
+        <!-- Buttons-->
   <a class="carousel-control-prev" href="#demo" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </a>
