--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <h1>Brooklyn College Student Art Directory</h1>
     
   <!--Navigation bar-->
+    <div>
     <div class="topnav">
         <a href="index.html">Home</a>
      <a href="Info.html">Info</a>
@@ -21,6 +22,7 @@
   <input type="text" placeholder="Search.." name="search2">
   <button type="submit"><i class="fa fa-search"></i></button>
 </form>
+    </div>
     </div>
     
     <!--Links for carousel-->
