--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Please type the refrence number to pull up more information about the painting</
 <div class="leftcolumn3">
 <div class="card">   
 <a href="http://www.brooklyn.cuny.edu/web/home.php">Where To Find Brooklyn College<br><br></a>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48454.07992141233!2d-73.97400286846333!3d40.621501080789166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfb7370c49a9db106!2sKing&#39;s%20Plaza%20Shopping%20Center!5e0!3m2!1sen!2sus!4v1581614109307!5m2!1sen!2sus" width="400" height="400" frameborder="0" style="border:0;" allowfullscreen=""><br></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.9735725859246!2d-73.9543016853186!3d40.630464779340876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb060f27c5f71c65e!2sBrooklyn%20College%20Bulldogs!5e0!3m2!1sen!2sus!4v1584648691935!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>   
 </div>
     <!--Right side-->
