--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <link rel="stylesheet" href="home.css">
 </head>
 <body>
-
+    
+<div class="header">
 <h1>Brooklyn College Student Art Directory</h1>
+    </div>
     
   <!--Navigation bar-->
     <div>
