--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@ Please type the refrence number to pull up more information about the painting</
 <strong>Location:</strong> 412 Library<br>
         <strong>Phone:</strong> 718.951.5342<br>
         <strong>Fax:</strong> 718.951.4557</p><br></p>
+<input class="button"type="button"value="Help" onclick="location.href='Info.html'">
 </div>
 
   </body>
