--- a/Directory.html
+++ b/Directory.html
@@ -7,8 +7,9 @@
 <link rel="stylesheet" href="Directory.css">
 </head>
 <body>
+    <div class="header">
 <h1>Brooklyn College Student Art Directory</h1>
-   
+   </div>
   <!--Navigation bar-->
     <div>
     <div class="topnav">
