--- a/Directory.html
+++ b/Directory.html
@@ -29,12 +29,24 @@
     <div class="leftcolumn">
 <div class="card">
       <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200">
+             <!--Caption-->
+        <div class="card">
+            <p><strong>Image 1</strong></p>
+        </div>
     </div>
 <div class="card">
       <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200">
+             <!--Caption-->
+        <div class="card">
+            <p><strong>Image 5</strong></p>
+        </div>
     </div>
       <div class="card">
       <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200">
+                   <!--Caption-->
+        <div class="card">
+            <p><strong>Image 9</strong></p>
+        </div>
     </div>
     </div>
     
