--- a/Directory.html
+++ b/Directory.html
@@ -35,7 +35,8 @@
         </div>
     </div>
 <div class="card">
-      <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200">
+    <a href="Image_1.html>
+             <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200"></a>
              <!--Caption-->
         <div class="card">
             <p><strong>Image 5</strong></p>
