--- a/Directory.html
+++ b/Directory.html
@@ -29,7 +29,7 @@
     <div class="leftcolumn">
 <div class="card">
      <a href="Image_1.html>
-              <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200"></a>
+              <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200" onclick="location.href='Image_1.html'"></a>
              <!--Caption-->
         <div class="card">
             <p><strong>Image 1</strong></p>
