--- a/Image_1.html
+++ b/Image_1.html
@@ -28,6 +28,8 @@
     <!--Image-->
     <div>
     <img src="comingSoon.jpg" alt="Image" class="center" align="middle">
+        <a href="Image_12.html" class="previous round">&#8249;</a>
+<a href="Image_2.html" class="next round">&#8250;</a>
     </div>
     
     
