--- a/Directory.html
+++ b/Directory.html
@@ -53,7 +53,7 @@
     
       <div class="leftcolumn">
 <div class="card">
-      <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200">
+      <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200" onclick="location.href='Image_2.html'">
              <!--Caption-->
         <div class="card">
             <p><strong>Image 2</strong></p>
@@ -79,7 +79,7 @@
     
   <div class="rightcolumn">
     <div class="card">
-      <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200">
+      <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200" onclick="location.href='Image_3.html'">
                  <!--Caption-->
         <div class="card">
             <p><strong>Image 3</strong></p>
