--- a/Directory.html
+++ b/Directory.html
@@ -29,9 +29,9 @@
 <div class="row">
 <div class="topcolumn">
 <div class="card">
-      <p><strong>Below is some info:</strong><br><br>      
-<p>We are a student operated website created for Brooklyn College students<br>
-Here you can learn more about the art hanging in our library.</p>
+      <p><strong>How to work page:</strong><br><br>      
+<p>To get to know about the paintings you can click the image or the text it<br>
+will redirect you to a page with more information about the art.</p>
 <br><br>
 <p>Every painting has a refrence number under it consisting of 4 numbers and 3 letters,<br>
 Please type the refrence number to pull up more information about the painting</p>
