--- a/Directory.html
+++ b/Directory.html
@@ -49,7 +49,7 @@ Please type the refrence number to pull up more information about the painting</
               <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200" onclick="location.href='Image_1.html'">
              <!--Caption-->
         <div class="card">
-            <p><strong>Image 1</strong></p>
+            <p onclick="location.href='Image_1.html'"><strong>Image 1</strong></p>
         </div>
     </div>
 <div class="card">
