--- a/Directory.html
+++ b/Directory.html
@@ -74,7 +74,7 @@ Please type the refrence number to pull up more information about the painting</
       <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200" onclick="location.href='Image_2.html'">
              <!--Caption-->
         <div class="card">
-            <p><strong>Image 2</strong></p>
+            <p onclick="location.href='Image_2.html'"><strong>Image 2</strong></p>
         </div>
     </div>
 <div class="card">
@@ -100,7 +100,7 @@ Please type the refrence number to pull up more information about the painting</
       <img src="comingSoon.jpg" alt="Coming Soon" width="200" height="200" onclick="location.href='Image_3.html'">
                  <!--Caption-->
         <div class="card">
-            <p><strong>Image 3</strong></p>
+            <p onclick="location.href='Image_3.html'"><strong>Image 3</strong></p>
         </div>
     </div>
 <div class="card">
