--- a/image_3.html
+++ b/image_3.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/images.css">
+  <link rel="icon" href="image/icon/paint_palette.png" type="image/png" sizes="16x16">
 </head>
 <body>
   <div class="header">
