--- a/info.html
+++ b/info.html
@@ -6,6 +6,7 @@
   <title>Info</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="image/icon/paint_palette.png" type="image/png" sizes="16x16">
 </head>
 
 <body>  
