--- a/directory.html
+++ b/directory.html
@@ -30,113 +30,41 @@
   <div class="row">
     <div class="topcolumn">
       <div class="card">
-        <strong>Below is some info:</strong>
-        <br><br>      
-        <p>We are a student operated website created for Brooklyn College students<br>
-        Here you can learn more about the art hanging in our library.</p>
-        <br><br>
-        <p>Every painting has a refrence number under it consisting of 4 numbers and 3 letters,<br>
-        Please type the refrence number to pull up more information about the painting</p>
-      </div>
-    </div>
-  </div>
-      
-      
-  <div class="row">
-    <div class="leftcolumn">
-      <div class="card">
-        <img src="image/comingSoon.jpg" alt="Coming Soon" width="200" height="200" onclick="location.href='image_1.html'">
-        <!--Caption-->
-        <div class="card">
-          <p onclick="location.href='image_1.html'"><strong>Image 1</strong></p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="image/comingSoon.jpg" alt="Coming Soon" width="200" height="200">
-        <!--Caption-->
-        <div class="card">
-          <p><strong>Image 5</strong></p>
-        </div>
+        <h1><strong>Buliding Directory: </strong></h1>
+        <h2>West Quad</h2>
+          <a href="directory/roosevelt_hall.html">Roosevelt Hall</a>
+          <br>
+          <a href="directory/roosevelt_hall_extension.html">Roosevelt Hall Extension</a>
+          <br>
+          <a href="directory/w.e.b_(west_end_buliding).html">W.E.B (West End Buliding)</a>
+          <br>
+          <a href="directory/west_quad.html">West Quad</a>
+          <br>
+          <a href="directory/william_james_hall.html">William James Hall</a>
+        <h2>East Quad</h2>
+          <a href="directory/boylan_hall.html">Boylan Hall</a>
+          <br>
+          <a href="directory/ingersoll_hall.html">Ingersoll Hall</a>
+          <br>
+          <a href="directory/ingersoll_hall_extension.html">Ingersoll Hall Extension</a>
+          <br>
+          <a href="directory/laguardia_hall_library.html">LaGuardia Hall Library</a>
+          <br>
+          <a href="directory/p.a.c_(performing_arts_center).html">P.A.C (Performing Arts Center)</a>
+          <br>
+          <a href="directory/whitehead_hall.html">Whitehead Hall</a>
+          <br>
+          <a href="directory/whitman_hall.html">Whitman Hall</a>
       </div>
       <div class="card">
-        <img src="image/comingSoon.jpg" alt="Coming Soon" width="200" height="200">
-         <!--Caption-->
-        <div class="card">
-          <p><strong>Image 9</strong></p>
-        </div>
-      </div>
-    </div>
-
-    <div class="leftcolumn">
-      <div class="card">
-        <img src="image/comingSoon.jpg" alt="Coming Soon" width="200" height="200" onclick="location.href='image_2.html'">
-        <!--Caption-->
-        <div class="card">
-          <p onclick="location.href='image_2.html'"><strong>Image 2</strong></p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="image/comingSoon.jpg" alt="Coming Soon" width="200" height="200">
-        <!--Caption-->
-        <div class="card">
-          <p><strong>Image 6</strong></p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="image/comingSoon.jpg" alt="Coming Soon" width="200" height="200">
-         <!--Caption-->
-        <div class="card">
-          <p><strong>Image 10</strong></p>
-        </div>
-      </div>
-    </div>  
-
-    <div class="rightcolumn">
-      <div class="card">
-        <img src="image/comingSoon.jpg" alt="Coming Soon" width="200" height="200" onclick="location.href='image_3.html'">
-        <!--Caption-->
-        <div class="card">
-          <p onclick="location.href='image_3.html'"><strong>Image 3</strong></p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="image/comingSoon.jpg" alt="Coming Soon" width="200" height="200">
-        <!--Caption-->
-        <div class="card">
-          <p><strong>Image 7</strong></p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="image/comingSoon.jpg" alt="Coming Soon" width="200" height="200">
-        <!--Caption-->
-        <div class="card">
-          <p><strong>Image 11</strong></p>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="rightcolumn2">
-      <div class="card">
-        <img src="image/comingSoon.jpg" alt="Coming Soon" width="200" height="200">
-        <!--Caption-->
-        <div class="card">
-          <p><strong>Image 4</strong></p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="image/comingSoon.jpg" alt="Coming Soon" width="200" height="200">
-        <!--Caption-->
-        <div class="card">
-          <p><strong>Image 8</strong></p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="image/comingSoon.jpg" alt="Coming Soon" width="200" height="200">
-         <!--Caption-->
-        <div class="card">
-          <p><strong>Image 12</strong></p>
-        </div>
+        <center><h1>Brooklyn College Map</h1></center>
+        <center>
+          <img src="image/bc_map.png" alt="Brooklyn College Map" usemap="#bcmap">
+          <map name="bcmap">
+            <!-- <area shape="rect" coords="x1, y1, x2, y2" href="link" alt="alternative text"> -->
+            <area shape="rect" coords="405, 23, 551, 79" href="directory/william_james_hall.html" alt="William James Hall">
+          </map>
+        </center>
       </div>
     </div>
   </div>
