--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -50,16 +50,16 @@
         <!-- Images used to open the lightbox -->
 <div class="row2">
   <div class="column">
-    <img src="InMyGrandmasWorkshop.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+    <img src="../image/InMyGrandmasWorkshop.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="ANewDirection.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+    <img src="../image/ANewDirection.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="CelestialSpheres.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+    <img src="../image/CelestialSpheres.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="FireyFields.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+    <img src="../image/FireyFields.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
   </div>
 </div>
 
@@ -70,22 +70,22 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 4</div>
-      <img src="InMyGrandmasWorkshop_wide.jpg" style="width:100%">
+      <img src="../image/InMyGrandmasWorkshop_wide.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 4</div>
-      <img src="ANewDirection_wide.jpg" style="width:100%">
+      <img src="../image/ANewDirection_wide.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 4</div>
-      <img src="CelestialSpheres_wide.jpg" style="width:100%">
+      <img src="../image/CelestialSpheres_wide.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">4 / 4</div>
-      <img src="FireyFields_wide.jpg" style="width:100%">
+      <img src="../image/FireyFields_wide.jpg" style="width:100%">
     </div>
 
     <!-- Next/previous controls -->
@@ -99,19 +99,19 @@
 
     <!-- Thumbnail image controls -->
     <div class="column">
-      <img class="demo" src="InMyGrandmasWorkshop.jpg" onclick="currentSlide(1)" alt="Nature">
+      <img class="demo" src="../image/InMyGrandmasWorkshop.jpg" onclick="currentSlide(1)" alt="Nature">
     </div>
 
     <div class="column">
-      <img class="demo" src="ANewDirection.jpg" onclick="currentSlide(2)" alt="Snow">
+      <img class="demo" src="../image/ANewDirection.jpg" onclick="currentSlide(2)" alt="Snow">
     </div>
 
     <div class="column">
-      <img class="demo" src="CelestialSpheres.jpg" onclick="currentSlide(3)" alt="Mountains">
+      <img class="demo" src="../image/CelestialSpheres.jpg" onclick="currentSlide(3)" alt="Mountains">
     </div>
 
     <div class="column">
-      <img class="demo" src="FireyFields.jpg" onclick="currentSlide(4)" alt="Lights">
+      <img class="demo" src="../image/FireyFields.jpg" onclick="currentSlide(4)" alt="Lights">
     </div>
   </div>
 </div>
