--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -6,6 +6,7 @@
   <title>LaGuardia Hall Library</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/laguardia_hall_library.css">
   <link rel="icon" href="../image/icon/paint_palette.png" type="image/png" sizes="16x16">
 </head>
 
