--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -52,16 +52,16 @@
         <!-- Images used to open the lightbox -->
 <div class="row2">
   <div class="column">
-    <img src="../image/InMyGrandmasWorkshop.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+    <img src="../image/InMyGrandmasWorkshop.jpg" style="width:25%" onclick="openModal();currentSlide(1)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/ANewDirection.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+    <img src="../image/ANewDirection.jpg" style="width:25%" onclick="openModal();currentSlide(2)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/CelestialSpheres.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+    <img src="../image/CelestialSpheres.jpg" style="width:25%" onclick="openModal();currentSlide(3)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/FireyFields.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+    <img src="../image/FireyFields.jpg" style="width:25%" onclick="openModal();currentSlide(4)" class="hover-shadow">
   </div>
 </div>
 
