--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="image/comingSoon.jpg" alt="comingSoon" width="200" height="200">
+        <img src="image/DancingCouple.jpg" alt="comingSoon" width="200" height="200">
         <div class="carousel-caption">
-          <h3>Image 0</h3>
-          <p>Image 0</p>
+          <h3>Dancing Couple</h3>
+          <p>William Kentridge</p>
         </div>   
       </div>
       <div class="carousel-item">
