--- a/index.html
+++ b/index.html
@@ -45,45 +45,45 @@
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="image/DancingCouple.jpg" alt="comingSoon" width="200" height="200">
+        <img src="image/DancingCouple.jpg" alt="comingSoon" width="100" height="100">
         <div class="carousel-caption">
           <h3>Dancing Couple</h3>
-          <p>William Kentridge</p>
+          <p>William Kentridge<br>1st Floor</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="image/comingSoon.jpg" alt="comingSoon" width="200" height="200">
+        <img src="image/Typewriter.jpg" alt="comingSoon" width="100" height="100">
         <div class="carousel-caption">
-          <h3>Image 1</h3>
-          <p>Image 1</p>
+          <h3>Typewriter</h3>
+          <p>William Kentridge<br>1st Floor</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="image/comingSoon.jpg" alt="comingSoon" width="200" height="200">
+        <img src="image/RiversEdge.jpg" alt="comingSoon" width="100" height="100">
         <div class="carousel-caption">
-          <h3>Image 2</h3>
-          <p>Image 2</p>
+          <h3>River's Edge</h3>
+          <p>Jim Lee<br>4th Floor</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="image/comingSoon.jpg" alt="comingSoon" width="200" height="200">
+        <img src="image/Neptune.jpg" alt="comingSoon" width="100" height="100">
         <div class="carousel-caption">
-          <h3>Image 3</h3>
-          <p>Image 3</p>
+          <h3>Neptune(detail);Bailey Fountain,Brooklyn,NY</h3>
+          <p>Richard Lord<br>Basement</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="image/comingSoon.jpg" alt="comingSoon" width="200" height="200">
+        <img src="image/Autumn.jpg" alt="comingSoon" width="100" height="100">
         <div class="carousel-caption">
-          <h3>Image 4</h3>
-          <p>Image 4</p>
+          <h3>Autumn</h3>
+          <p>Alfred Russel<br>3rd Floor</p>
         </div>   
       </div>
        <div class="carousel-item">
-        <img src="image/comingSoon.jpg" alt="comingSoon" width="200" height="200">
+        <img src="image/MusicalMermaid.jpg" alt="comingSoon" width="100" height="100">
         <div class="carousel-caption">
-          <h3>Image 5</h3>
-          <p>Image 5</p>
+          <h3>The Musical Mermaid</h3>
+          <p>Anthony G. Gennarelli<br>Basement</p>
         </div>   
       </div>
     </div>
