--- a/index.html
+++ b/index.html
@@ -117,11 +117,12 @@
     <!-- 1 image-->
     <div class="leftcolumn2">
       <div class="card">
-        <img src="image/comingSoon.jpg" alt="comingSoon" width="250" height="300">
+        <img src="image/Wallabout.jpg" alt="Wallabout" width="250" height="300">
       </div>
       <!--Caption-->
       <div class="card">
-        <p><strong>Image 1</strong></p>
+        <p><strong>The Wallabout Market</strong></p>
+        <p>R. Adams<br>1st Floor</p>
       </div>
     </div>
 
@@ -129,33 +130,36 @@
     <!--2nd image-->
     <div class="centercolumn">
       <div class="card">
-        <img src="image/comingSoon.jpg" alt="comingSoon" width="250" height="300">
+        <img src="image/Blinded.jpg" alt="comingSoon" width="250" height="300">
       </div>
       <!--Caption-->
       <div class="card">
-        <p><strong>Image 2</strong></p>
+        <p><strong>The Blind Leading the Blind</strong></p>
+        <p>John Arruda<br>1st Floor</p>
       </div>
     </div>
 
     <!--3 image-->
     <div class="rightcolumn">
       <div class="card">
-        <img src="image/comingSoon.jpg" alt="comingSoon" width="250" height="300">
+        <img src="Aspen.jpg" alt="comingSoon" width="250" height="300">
       </div>
       <!--Caption-->
       <div class="card">
-        <p><strong>Image 3</strong></p>
+        <p><strong>Aspen</strong></p>
+        <p>Harold Baumbach<br>4th Floor</p>
       </div>
     </div>
 
     <!--3 image-->
     <div class="rightcolumn2">
       <div class="card">
-        <img src="image/comingSoon.jpg" alt="comingSoon" width="250" height="300">
+        <img src="image/EchoingFactors.jpg" alt="comingSoon" width="250" height="300">
       </div>
       <!--Caption-->
       <div class="card">
-        <p><strong>Image 4</strong></p>
+        <p><strong>Echoing Factors</strong></p>
+        <p>Chakaia Booker<br>1st Floor</p>
       </div>
     </div>
   </div>
