--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!--3 image-->
     <div class="rightcolumn">
       <div class="card">
-        <img src="Aspen.jpg" alt="comingSoon" width="250" height="300">
+        <img src="image/Aspen.jpg" alt="comingSoon" width="250" height="300">
       </div>
       <!--Caption-->
       <div class="card">
