Updated directory pages

--- a/directory/boylan_hall.html
+++ b/directory/boylan_hall.html
@@ -43,6 +43,9 @@
         <a href="">3rd Floor</a>
         <br>
         <a href="">4th Floor</a>
+        <br>
+        <a href="">5th Floor</a>
+        <center><h3><i>*There is currently no information on art pieces in this building*</i></h3></center>
       </div>
     </div>
   </div>
