--- a/directory/w.e.b_(west_end_buliding).html
+++ b/directory/w.e.b_(west_end_buliding).html
@@ -34,6 +34,11 @@
     <div class="topcolumn">
       <div class="card">
         <center><h1><strong>W.E.B (West End Buliding)</strong></h1></center>
+        <a href="">1st Floor</a>
+        <br>
+        <a href="">2nd Floor</a>
+        <br>
+        <center><h3><i>*There is currently no information on art pieces in this building*</i></h3></center>
       </div>
     </div>
   </div>
