--- a/directory/roosevelt_hall.html
+++ b/directory/roosevelt_hall.html
@@ -34,6 +34,14 @@
     <div class="topcolumn">
       <div class="card">
         <center><h1><strong>Roosevelt Hall</strong></h1></center>
+        <a href="">Basement</a>
+        <br>
+        <a href="">1st Floor</a>
+        <br>
+        <a href="">2nd Floor</a>
+        <br>
+        <a href="">3rd Floor</a>
+        <center><h3><i>*There is currently no information on art pieces in this building*</i></h3></center>
       </div>
     </div>
   </div>
