--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -71,22 +71,22 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 4</div>
-      <img src="../image/InMyGrandmasWorkshop.jpg" style="width:100%">
+      <img src="../image/InMyGrandmasWorkshop.jpg" style="width:75%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 4</div>
-      <img src="../image/ANewDirection.jpg" style="width:100%">
+      <img src="../image/ANewDirection.jpg" style="width:75%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 4</div>
-      <img src="../image/CelestialSpheres.jpg" style="width:100%">
+      <img src="../image/CelestialSpheres.jpg" style="width:75%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">4 / 4</div>
-      <img src="../image/FireyFields.jpg" style="width:100%">
+      <img src="../image/FireyFields.jpg" style="width:75%">
     </div>
 
     <!-- Next/previous controls -->
@@ -100,19 +100,19 @@
 
     <!-- Thumbnail image controls -->
     <div class="column">
-      <img class="demo" src="../image/InMyGrandmasWorkshop.jpg" onclick="currentSlide(1)" alt="Nature">
+      <img class="demo" src="../image/InMyGrandmasWorkshop.jpg" onclick="currentSlide(1)" alt="In my Grandmas Workshop" style="width:50%">
     </div>
 
     <div class="column">
-      <img class="demo" src="../image/ANewDirection.jpg" onclick="currentSlide(2)" alt="Snow">
+      <img class="demo" src="../image/ANewDirection.jpg" onclick="currentSlide(2)" alt="A New Direction" style="width:50%">
     </div>
 
     <div class="column">
-      <img class="demo" src="../image/CelestialSpheres.jpg" onclick="currentSlide(3)" alt="Mountains">
+      <img class="demo" src="../image/CelestialSpheres.jpg" onclick="currentSlide(3)" alt="Celestial Spheres" style="width:50%">
     </div>
 
     <div class="column">
-      <img class="demo" src="../image/FireyFields.jpg" onclick="currentSlide(4)" alt="Lights">
+      <img class="demo" src="../image/FireyFields.jpg" onclick="currentSlide(4)" alt="Firey Fields" style="width:50%">
     </div>
   </div>
 </div> 
