--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -100,7 +100,8 @@
 
     <!-- Thumbnail image controls -->
     <div class="column">
-      <img class="demo" src="../image/InMyGrandmasWorkshop.jpg" onclick="currentSlide(1)" alt="In my Grandmas Workshop" style="width:50%">
+      <img class="demo" src="../image/InMyGrandmasWorkshop.jpg" onclick="currentSlide(1)" alt="En el taller de mi abuela (In my grandma’s workshop)" style="width:50%">
+      <p>Artist: Alberto Marcos Bursztyn (American)</p>
     </div>
 
     <div class="column">
@@ -115,6 +116,25 @@
       <img class="demo" src="../image/FireyFields.jpg" onclick="currentSlide(4)" alt="Firey Fields" style="width:50%">
     </div>
   </div>
+  <p>
+    The Brooklyn College Library Collection. Gift of Alberto Marcos Bursztyn.<br><br>
+
+    As a child, I often sat on the floor of my abuela Sara’s workshop while she was busy <br>
+    in the kitchen making delicious meals. Her dressmaker’s workshop was her livelihood, but <br>
+    also my playground. Gathering strips of cloth, searching for interesting buttons, hiding <br>
+    under the worktable and pretending to disappear, the workshop invited me to imagine. <br>
+    The piece evokes echoes from that period and celebrates her craft. It honors the strength <br>
+    and creativity of immigrant women who mend, stitch, and keep their families together with <br>
+    found remnants and threads of memory. My grandmother’s family migrated to Argentina in the <br>
+    early 1900’s escaping violent outburst of antisemitism in Ukraine. My mother in-law, a gifted <br>
+    dressmaker born in Poland, survived Nazi labor camps, including Auschwitz-Birkenau by sewing <br>
+    fashionable evening wear for female Nazi guards. Thread spools from her Brooklyn sewing kit form <br>
+    the necklace of this piece.<br>
+
+    The mannequin is covered by strips of maps from every corner of the planet, but each strip tells <br>
+    only a fragment of a story. Only when assembled together, we discern their purpose and aesthetic quality. <br>
+    The belt depicts a seismographic reading of a major earthquake, a reminder of traumas that bind and contain a fragmented past.
+  </p>
 </div> 
         
         
