--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -127,13 +127,13 @@
          <!-- Images used to open the lightbox -->
 <div class="row2">
   <div class="column">
-    <img src="../image/TheWallaboutMarket.jpg" style="width:50%" onclick="openModal();currentSlide(1)" class="hover-shadow">
+    <img src="../image/Wallabout.jpg" style="width:50%" onclick="openModal();currentSlide(1)" class="hover-shadow">
   </div>
   <div class="column">
     <img src="../image/PresidentVernon.jpg" style="width:50%" onclick="openModal();currentSlide(2)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/CelestialSpheres.jpg" style="width:50%" onclick="openModal();currentSlide(3)" class="hover-shadow">
+    <img src="../image/Blinded.jpg" style="width:50%" onclick="openModal();currentSlide(3)" class="hover-shadow">
   </div>
   <div class="column">
     <img src="../image/FireyFields.jpg" style="width:50%" onclick="openModal();currentSlide(4)" class="hover-shadow">
@@ -146,7 +146,7 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 4</div>
-      <img src="../image/TheWallaboutMarket.jpg" style="width:100%">
+      <img src="../image/Wallabout.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
@@ -156,7 +156,7 @@
 
     <div class="mySlides">
       <div class="numbertext">3 / 4</div>
-      <img src="../image/CelestialSpheres.jpg" style="width:100%">
+      <img src="../image/Blinded.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
@@ -175,7 +175,7 @@
 
     <!-- Thumbnail image controls -->
     <div class="column">
-      <img class="demo" src="../image/TheWallaboutMarket.jpg" onclick="currentSlide(1)" alt="The Wallabout Market" style="width:50%">
+      <img class="demo" src="../image/Wallabout.jpg" onclick="currentSlide(1)" alt="The Wallabout Market" style="width:50%">
     </div>
 
     <div class="column">
@@ -183,7 +183,7 @@
     </div>
 
     <div class="column">
-      <img class="demo" src="../image/CelestialSpheres.jpg" onclick="currentSlide(3)" alt="Celestial Spheres" style="width:50%">
+      <img class="demo" src="../image/Blinded.jpg" onclick="currentSlide(3)" alt="Celestial Spheres" style="width:50%">
     </div>
 
     <div class="column">
