--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -136,7 +136,7 @@
     <img src="../image/Blinded.jpg" style="width:50%" onclick="openModal();currentSlide(3)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/FireyFields.jpg" style="width:50%" onclick="openModal();currentSlide(4)" class="hover-shadow">
+    <img src="../image/EchoingFactors.jpg" style="width:50%" onclick="openModal();currentSlide(4)" class="hover-shadow">
   </div>
 </div>
      <!-- The Modal/Lightbox -->
@@ -161,7 +161,7 @@
 
     <div class="mySlides">
       <div class="numbertext">4 / 4</div>
-      <img src="../image/FireyFields.jpg" style="width:100%">
+      <img src="../image/EchoingFactors.jpg" style="width:100%">
     </div>
 
     <!-- Next/previous controls -->
@@ -187,7 +187,7 @@
     </div>
 
     <div class="column">
-      <img class="demo" src="../image/FireyFields.jpg" onclick="currentSlide(4)" alt="Firey Fields" style="width:50%">
+      <img class="demo" src="../image/EchoingFactors.jpg" onclick="currentSlide(4)" alt="EchoingFactors" style="width:50%">
     </div>
   </div>
 </div>
