--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -127,67 +127,67 @@
          <!-- Images used to open the lightbox -->
 <div class="row2">
   <div class="column">
-    <img src="../image/Wallabout.jpg" style="width:50%" onclick="openModal();currentSlide(1)" class="hover-shadow">
+    <img src="../image/Wallabout.jpg" style="width:50%" onclick="openModal2();currentSlide2(1)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/PresidentVernon.jpg" style="width:50%" onclick="openModal();currentSlide(2)" class="hover-shadow">
+    <img src="../image/PresidentVernon.jpg" style="width:50%" onclick="openModal2();currentSlide2(2)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/Blinded.jpg" style="width:50%" onclick="openModal();currentSlide(3)" class="hover-shadow">
+    <img src="../image/Blinded.jpg" style="width:50%" onclick="openModal2();currentSlide2(3)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/EchoingFactors.jpg" style="width:50%" onclick="openModal();currentSlide(4)" class="hover-shadow">
+    <img src="../image/EchoingFactors.jpg" style="width:50%" onclick="openModal2();currentSlide2(4)" class="hover-shadow">
   </div>
 </div>
      <!-- The Modal/Lightbox -->
-<div id="myModal" class="modal">
-  <span class="close cursor" onclick="closeModal()">&times;</span>
+<div id="myModal2" class="modal2">
+  <span class="close cursor" onclick="closeModal2()">&times;</span>
   <div class="modal-content">
 
-    <div class="mySlides">
+    <div class="mySlides2">
       <div class="numbertext">1 / 4</div>
       <img src="../image/Wallabout.jpg" style="width:100%">
     </div>
 
-    <div class="mySlides">
+    <div class="mySlides2">
       <div class="numbertext">2 / 4</div>
       <img src="../image/PresidentVernon.jpg" style="width:100%">
     </div>
 
-    <div class="mySlides">
+    <div class="mySlides2">
       <div class="numbertext">3 / 4</div>
       <img src="../image/Blinded.jpg" style="width:100%">
     </div>
 
-    <div class="mySlides">
+    <div class="mySlides2">
       <div class="numbertext">4 / 4</div>
       <img src="../image/EchoingFactors.jpg" style="width:100%">
     </div>
 
     <!-- Next/previous controls -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <a class="prev" onclick="plusSlides2(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides2(1)">&#10095;</a>
 
     <!-- Caption text -->
     <div class="caption-container">
-      <p id="caption"></p>
+      <p id="caption2"></p>
     </div>
 
     <!-- Thumbnail image controls -->
     <div class="column">
-      <img class="demo" src="../image/Wallabout.jpg" onclick="currentSlide(1)" alt="The Wallabout Market" style="width:50%">
+      <img class="demo2" src="../image/Wallabout.jpg" onclick="currentSlide2(1)" alt="The Wallabout Market" style="width:50%">
     </div>
 
     <div class="column">
-      <img class="demo" src="../image/PresidentVernon.jpg" onclick="currentSlide(2)" alt="President Vernon Lattin" style="width:50%">
+      <img class="demo2" src="../image/PresidentVernon.jpg" onclick="currentSlide2(2)" alt="President Vernon Lattin" style="width:50%">
     </div>
 
     <div class="column">
-      <img class="demo" src="../image/Blinded.jpg" onclick="currentSlide(3)" alt="Celestial Spheres" style="width:50%">
+      <img class="demo2" src="../image/Blinded.jpg" onclick="currentSlide2(3)" alt="Celestial Spheres" style="width:50%">
     </div>
 
     <div class="column">
-      <img class="demo" src="../image/EchoingFactors.jpg" onclick="currentSlide(4)" alt="EchoingFactors" style="width:50%">
+      <img class="demo2" src="../image/EchoingFactors.jpg" onclick="currentSlide2(4)" alt="EchoingFactors" style="width:50%">
     </div>
   </div>
 </div>
