--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -142,7 +142,7 @@
      <!-- The Modal/Lightbox -->
 <div id="myModal2" class="modal2">
   <span class="close cursor" onclick="closeModal2()">&times;</span>
-  <div class="modal-content">
+  <div class="modal-content2">
 
     <div class="mySlides2">
       <div class="numbertext">1 / 4</div>
@@ -169,7 +169,7 @@
     <a class="next" onclick="plusSlides2(1)">&#10095;</a>
 
     <!-- Caption text -->
-    <div class="caption-container">
+    <div class="caption-container2">
       <p id="caption2"></p>
     </div>
 
