--- a/index.html
+++ b/index.html
@@ -45,42 +45,42 @@
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="image/DancingCouple.jpg" alt="comingSoon" width="100" height="100">
+        <img src="image/DancingCouple.jpg" alt="comingSoon" style="width:50%;">
         <div class="carousel-caption">
           <h3>Dancing Couple</h3>
           <p>William Kentridge<br>1st Floor</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="image/Typewriter.jpg" alt="comingSoon" width="100" height="100">
+        <img src="image/Typewriter.jpg" alt="comingSoon" style="width:50%;">
         <div class="carousel-caption">
           <h3>Typewriter</h3>
           <p>William Kentridge<br>1st Floor</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="image/RiversEdge.jpg" alt="comingSoon" width="100" height="100">
+        <img src="image/RiversEdge.jpg" alt="comingSoon" style="width:50%;">
         <div class="carousel-caption">
           <h3>River's Edge</h3>
           <p>Jim Lee<br>4th Floor</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="image/Neptune.jpg" alt="comingSoon" width="100" height="100">
+        <img src="image/Neptune.jpg" alt="comingSoon" style="width:50%;">
         <div class="carousel-caption">
           <h3>Neptune(detail);Bailey Fountain,Brooklyn,NY</h3>
           <p>Richard Lord<br>Basement</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="image/Autumn.jpg" alt="comingSoon" width="100" height="100">
+        <img src="image/Autumn.jpg" alt="comingSoon" style="width:50%;">
         <div class="carousel-caption">
           <h3>Autumn</h3>
           <p>Alfred Russel<br>3rd Floor</p>
         </div>   
       </div>
        <div class="carousel-item">
-        <img src="image/MusicalMermaid.jpg" alt="comingSoon" width="100" height="100">
+        <img src="image/MusicalMermaid.jpg" alt="comingSoon" style="width:50%;">
         <div class="carousel-caption">
           <h3>The Musical Mermaid</h3>
           <p>Anthony G. Gennarelli<br>Basement</p>
