--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="image/DancingCouple.jpg" alt="comingSoon" style="width:50%;">
+        <img src="image/DancingCouple.jpg" alt="comingSoon" style="width:50%;align:center;">
         <div class="carousel-caption">
           <h3>Dancing Couple</h3>
           <p>William Kentridge<br>1st Floor</p>
