--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -72,22 +72,22 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 4</div>
-      <img src="../image/InMyGrandmasWorkshop.jpg" style="width:100%">
+      <img src="../image/InMyGrandmasWorkshop.jpg" style="width:50%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 4</div>
-      <img src="../image/ANewDirection.jpg" style="width:100%">
+      <img src="../image/ANewDirection.jpg" style="width:50%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 4</div>
-      <img src="../image/CelestialSpheres.jpg" style="width:100%">
+      <img src="../image/CelestialSpheres.jpg" style="width:50%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">4 / 4</div>
-      <img src="../image/FireyFields.jpg" style="width:100%">
+      <img src="../image/FireyFields.jpg" style="width:50%">
     </div>
 
     <!-- Next/previous controls -->
@@ -115,6 +115,19 @@
     <div class="column">
       <img class="demo" src="../image/FireyFields.jpg" onclick="currentSlide(4)" alt="Firey Fields" style="width:50%">
     </div>
+    <p><br><br><br><br><br><br>The Brooklyn College Library Collection. Gift of Alberto Marcos Bursztyn.<br><br>
+      As a child, I often sat on the floor of my abuela Sara’s workshop while she was busy in the kitchen making <br>
+      delicious meals. Her dressmaker’s workshop was her livelihood, but also my playground. Gathering strips of cloth, <br>
+      searching for interesting buttons, hiding under the worktable and pretending to disappear, the workshop invited me <br>
+      to imagine. The piece evokes echoes from that period and celebrates her craft. It honors the strength and creativity of <br>
+      immigrant women who mend, stitch, and keep their families together with found remnants and threads of memory. My grandmother’s <br>
+      family migrated to Argentina in the early 1900’s escaping violent outburst of antisemitism in Ukraine. My mother in-law, <br>
+      a gifted dressmaker born in Poland, survived Nazi labor camps, including Auschwitz-Birkenau by sewing fashionable evening <br>
+      wear for female Nazi guards. Thread spools from her Brooklyn sewing kit form the necklace of this piece.<br><br>
+
+      The mannequin is covered by strips of maps from every corner of the planet, but each strip tells only a fragment of <br>
+      a story. Only when assembled together, we discern their purpose and aesthetic quality. The belt depicts a seismographic <br>
+      reading of a major earthquake, a reminder of traumas that bind and contain a fragmented past.</p>
   </div>
 </div> 
         
