--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -96,7 +96,7 @@
 
     <!-- Caption text -->
     <div class="caption-container">
-      <p id="caption"></p>
+      <p id="caption">Test</p>
     </div>
 
     <!-- Thumbnail image controls -->
